spec/e2e/number/underscore/invalid.lit
# error: [line 2] Syntax error: Trailing underscore in number literal
1_

# error: [line 5] Syntax error: Invalid underscore placement in number literal
1__2

# error: [line 8] Syntax error: Invalid underscore placement in number literal
1_.0

# error: [line 11] Syntax error: Invalid underscore placement in number literal
1._0

# this is fine when scanning. It's just an identifier
_1
